2009-02-15  higepon  <higepon@users.sourceforge.jp>

        * Wrote : README and AUTHORS.

        * Arithmetic.cpp (Arithmetic::sin): Make it faster.

        * Enabled following options for GC. These options makes mosh very faster.
          AC_DEFINE(DONT_ADD_BYTE_AT_END)
          AC_DEFINE(LARGE_CONFIG)

          (let loop ([i 0])
            (if (= i 10000000)
              '()
               (begin (vector 1 2 3)
               (loop (+ i 1)))))

        * Object-inl.h (Object::makeObjectArray): Inlined.

        * Vector.h (Vector::Vector): Inlined Constructor for better performance.

        * VM-Run.cpp : Added VECTOR instruction for (vector ...). For better performance.

2009-02-14  higepon  <higepon@users.sourceforge.jp>

        * NUMBER_MUL : Make shortcut for Real-valued multiply.

        * Inlined Object::makeFlonum().

        * lib/core/r5rs.scm: Rewrote quotient, remainder and modulo in C++ for better performance.

2009-02-13  higepon  <higepon@users.sourceforge.jp>

        * bench/aobench.ss: Added for flonum aritmetic operations.

2009-02-12  higepon  <higepon@users.sourceforge.jp>

        * Object-inl.h (Object::isNil): Force to use Immediate value.

        * Not to use isNumber before calling Arithmetic::op*. It causes slow arithmetic.

2009-02-10  higepon  <higepon@users.sourceforge.jp>

        * Added : msse, msse2, msse3 and fpmath=sse for some processors.

        * configure.ac: Added OSX Core2 Duo check.

2009-02-09  higepon  <higepon@users.sourceforge.jp>

        * doc/text/srfi.txt (Title): Added document for SRFIs.

2009-02-08  higepon  <higepon@users.sourceforge.jp>

        * configure.ac: Added -march.

2009-02-07  higepon  <higepon@users.sourceforge.jp>

        * Size reduction srfi 0, 1, 11, 13 and 14.

        * scripts/only-maker.ss : Added.

        * library.scm (show-profile): Make up profiler results. (ungensym things.)

2009-02-07  kokosabu  <kokosabu@gmail.com>
